2017-10-01  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RProtoBuf-intro.Rmd: Renamed, now uses Rmd via pinp
	* vignettes/RProtoBuf-quickref.Rmd: Idem

	* DESCRIPTION: Added pinp package, rolled minor version, use doi
	in Description

	* cleanup: Adjusted and updated

2017-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (before_install): Use https for curl fetch

2017-08-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/S4_classes.h: Initialize S4 base class in copy constructor
	for S4_ArrayOutputStream class

2017-08-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.10

	* R/00classes.R: Correct one package= arg in .Call to PACKAGE as
	requested by CRAN
	* src/init.c: Corresponding change in Descriptor_getField registration

	* inst/unitTests/runit.import.R (test.import): Test failing import on
	package's own DESCRIPTION file rather than /etc/hosts

2017-08-01  Jeffrey Shen  <jeffrey.shen@displayr.com>

	* R/rexp_obj.R: Check in deserializer if invalid class is set

2017-03-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.9

2017-03-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* src/init.c (R_init_RProtoBuf): Call R_registerRoutines()
	and R_useDynamicSymbols()

	* NAMESPACE: Use .registration=TRUE on useDynLib

	* src/extensions.cpp (rprotobuf): Rename getExtension to
	getExtension_cpp to disambiguate from R function
	* src/rprotobuf.cpp (rprotobuf): Idem for readProtoFiles_cpp

	* R/00classes.R (.icall): Comment-out unused function
	(setMethod): Remove erroneous extra '...' from Message_clone arguments
	* R/clone.R (._clone.message): Add missing PACKAGE= argument to .Call
	* R/extensions.R: Idem
	* R/has.R (._has_enum_name): Idem
	* R/internals.R (readProtoFiles): Idem
	* R/merge.R: Idem
	* R/with.R (generateActiveBindings): Idem