@@ -16,12 +16,12 @@ env:
   
 before_install:
   - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
-  # if v3, add the launchpad repo which has (inter alia) the newest ProtoBuf as an unofficial build
-  - if [ "$PROTOBUF" == "v3" ]; then sudo add-apt-repository -y ppa:edd/misc; fi
+  ## PPA for Rcpp and some other packages
+  - sudo add-apt-repository -y ppa:edd/misc
   - ./run.sh bootstrap
 
 install:
-  - ./run.sh install_aptget libprotobuf-dev libprotoc-dev protobuf-compiler r-cran-rcpp r-cran-runit r-cran-rcurl r-cran-highlight
+  - ./run.sh install_aptget libprotobuf-dev libprotoc-dev protobuf-compiler r-cran-rcpp r-cran-runit r-cran-rcurl r-cran-pinp
 
 script:
   - ./run.sh run_tests
